[package]
name = "cyclictest-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Benchmark for thread latencies in real-time systems similar to cyclictest"
readme = "README.md"

repository = "https://github.com/abelikt/rt-tests-rs"
authors = ["Michael Abel <mabel@bitmuster.org>", "Michael Abel <info@abel-ikt.de>" ]

[dependencies]
